[package]
name = "a8k"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3"}
tokio = { version = "1", features = ["full"] }
clap = { version = "3.1.9", features = ["derive"] }
rocket = "0.5.0-rc.1"
openssh = "0.9.0"
env_logger = "0.7"
log = "0.4"
ctrlc = "3.2.1"
toml = "0.5.9"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
